# Cuda-labs

axpy/: axpy.sln
axpy/axpy/: axpy.vcxproj  kernel.cu
hello_world/: hello_world.sln
hello_world/hello_world/: hello_world.vcxproj  kernel.cu
hello_world/hello_world/x64/Debug/: kernel.cu.cache  kernel.cu1467031894.deps
hello_world/hello_world/x64/Debug/hello_world.tlog/: hello_world.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
hello_world/x64/Debug/: hello_world.ilk
matrix_mult/: CMakeLists.txt  main.cu  matrix_mult.sln
matrix_mult/matrix_mult/: cpuMultMat.cpp  main.cu  matrix_mult.vcxproj  multMat.cu
min_residual_method/: CMakeLists.txt  main.cu
